# Lab6_CPP

./: CMakeLists.txt  game.cpp  game.h  main.cpp  player.cpp  player.h  random_generator.cpp  random_generator.h
